--- a/biographycss.css
+++ b/biographycss.css
@@ -8,6 +8,7 @@ body {
   font: 1.2em / 1.5 system-ui;
   padding: 20px;
   margin: 0 auto;
+
 }
 
 ul {
@@ -15,4 +16,36 @@ ul {
   padding: 30px;
   border: 5px solid purple;
   border-radius: 20px;
+
+}
+
+h1 {
+  color: darkslategray;
+  border-bottom: 10px dotted purple;
+  font-size: 2rem;
+}
+
+h2 {
+  font-style: italic;
+  font-size: 1.5rem;
+}
+
+.job-title {
+  color: darkslategray;
+  font-weight: bold;
+}
+
+a {
+  color: green;
+
+}
+
+a:hover {
+  color: darkgreen;
+  text-decoration: none;
+}
+
+a:focus {
+  color: darkgreen;
+  text-decoration: none;
 }
