--- a/biographycss.css
+++ b/biographycss.css
@@ -1,3 +1,11 @@
+/*
+Created by: Stacey Wilson
+File: biographycss.css
+Date: 19/10/2025  
+Desc: This is the css file accompanying the 'biography' html page for the 
+'Styling a biography page' from mdn for my web dev course. 
+(mdn challenge - Styling a biography page)
+*/
 html {
   background-color: white;
 }
